Open XWIKI-21452: Macros info, success, warning and error are only distinguished by colors
* Updated list instantiation

Co-authored-by: Manuel Leduc <manuel.leduc@xwiki.com>